[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gke_log_metrics"
version = "0.1.1"
description = "GKE-friendly JSON logging and optional Prometheus metrics for Grafana log-based metrics and monitoring"
authors = [{ name = "Data Science Team" }]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
keywords = ["gke", "logging", "json", "prometheus", "grafana", "metrics"]

[project.urls]
Homepage = "https://github.com/CityofEdmonton/gke_log_metrics"
Repository = "https://github.com/CityofEdmonton/gke_log_metrics.git"
